--- a/notebooks/plot_encoding_model_fits/plot_gabor_model.ipynb
+++ b/notebooks/plot_encoding_model_fits/plot_gabor_model.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f6cf3de1",
+   "id": "318e987e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,8 +30,68 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "id": "6ad7697e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "out = torch.load('/user_data/mmhender/imStat/model_fits/S01/gabor_solo_ridge_12ori_8sf/Feb-02-2022_1231_35_DEBUG/all_fit_params')\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "678f1f23",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['subject', 'volume_space', 'fitting_types', 'voxel_mask', 'brain_nii_shape', 'image_order', 'voxel_index', 'voxel_roi', 'voxel_ncsnr', 'which_prf_grid', 'models', 'best_losses', 'best_lambdas', 'best_params', 'lambdas', 'val_cc', 'val_r2', 'partial_masks', 'partial_version_names', 'zscore_features', 'ridge', 'debug', 'up_to_sess', 'single_sess', 'shuff_rnd_seed', 'use_precomputed_prfs', 'saved_prfs_fn', 'best_layer_each_voxel', 'saved_best_layer_fn', 'corr_each_feature', 'sem_discrim_each_axis', 'sem_corr_each_axis', 'discrim_type_list', 'feature_table_simple', 'filter_pars_simple', 'orient_filters_simple', 'feature_table_complex', 'filter_pars_complex', 'orient_filters_complex', 'feature_types_exclude', 'gabor_feature_info', 'autocorr_output_pix', 'group_all_hl_feats', 'gabor_nonlin_fn'])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "55429440",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[nan, nan, nan, ..., nan, nan, nan],\n",
+       "       [nan, nan, nan, ..., nan, nan, nan],\n",
+       "       [ 0.,  0.,  0., ...,  0.,  0.,  0.],\n",
+       "       ...,\n",
+       "       [ 0.,  0.,  0., ...,  0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0., ...,  0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0., ...,  0.,  0.,  0.]])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out['sem_corr_each_axis']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
-   "id": "38af9c3e",
+   "id": "eb4bb24b",
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "3f4dcd60",
+   "id": "f20c582f",
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "48858d38",
+   "id": "d655b031",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "6ef949af",
+   "id": "1064a6f1",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "6897a84e",
+   "id": "64fba93e",
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "9ede40f8",
+   "id": "493d359a",
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "649c6b10",
+   "id": "59157f04",
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a56d7358",
+   "id": "444b20b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "2e3840b3",
+   "id": "b6412f80",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78975364",
+   "id": "9b1e07fa",
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "7c3f94fc",
+   "id": "72333a52",
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "5b7430c0",
+   "id": "3cdd3f88",
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "8a3a6364",
+   "id": "dd05e05b",
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +409,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "0dabafc3",
+   "id": "23bb0315",
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "11b2aa2b",
+   "id": "b59e5e88",
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +455,7 @@
   {
    "cell_type": "code",
    "execution_count": 150,
-   "id": "02e431b7",
+   "id": "5a6f1962",
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "eea7d5dc",
+   "id": "06382906",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "4a356f5c",
+   "id": "9c14ac44",
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +565,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "7ae150d9",
+   "id": "968c12f3",
    "metadata": {},
    "outputs": [
     {
@@ -573,7 +633,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "fc4cfcf3",
+   "id": "48227585",
    "metadata": {
     "tags": []
    },
@@ -636,7 +696,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "6eff19dc",
+   "id": "8c5abf1e",
    "metadata": {
     "tags": []
    },
@@ -698,7 +758,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "daa8d58c",
+   "id": "e2d56102",
    "metadata": {},
    "outputs": [
     {
@@ -790,7 +850,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "7f48f04b",
+   "id": "6a287d6b",
    "metadata": {},
    "outputs": [
     {
@@ -878,7 +938,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "b52f2898",
+   "id": "61e8e0b0",
    "metadata": {},
    "outputs": [
     {
@@ -957,7 +1017,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "20585ef9",
+   "id": "268c1758",
    "metadata": {},
    "outputs": [
     {
@@ -1033,7 +1093,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "772a9577",
+   "id": "d791cfe9",
    "metadata": {},
    "outputs": [
     {
@@ -1084,7 +1144,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "a69adf92",
+   "id": "b6ada789",
    "metadata": {},
    "outputs": [
     {
@@ -1156,7 +1216,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "ccf55cd0",
+   "id": "8d51e025",
    "metadata": {},
    "outputs": [
     {
@@ -1218,7 +1278,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "c5223b5f",
+   "id": "115f4c8c",
    "metadata": {},
    "outputs": [
     {
@@ -1299,7 +1359,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "07d048c4",
+   "id": "2e75e9fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1326,7 +1386,7 @@
   {
    "cell_type": "code",
    "execution_count": 187,
-   "id": "ef067b7b",
+   "id": "d9e83faf",
    "metadata": {},
    "outputs": [
     {
@@ -1347,7 +1407,7 @@
   {
    "cell_type": "code",
    "execution_count": 186,
-   "id": "b77e79d8",
+   "id": "c31c0cc2",
    "metadata": {},
    "outputs": [
     {
@@ -1368,7 +1428,7 @@
   {
    "cell_type": "code",
    "execution_count": 188,
-   "id": "bca63369",
+   "id": "d189dd6b",
    "metadata": {},
    "outputs": [
     {
@@ -1389,7 +1449,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "3c668ff0",
+   "id": "64ba9841",
    "metadata": {},
    "outputs": [
     {
@@ -1470,7 +1530,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "a384f90a",
+   "id": "40384bdd",
    "metadata": {},
    "outputs": [
     {
@@ -1516,7 +1576,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "6778c659",
+   "id": "6809d849",
    "metadata": {},
    "outputs": [
     {
@@ -1562,7 +1622,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "4fafa4db",
+   "id": "fe62735e",
    "metadata": {},
    "outputs": [
     {
@@ -1610,7 +1670,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "585a9d06",
+   "id": "4e8e9112",
    "metadata": {},
    "outputs": [
     {
