updating jupyter notebooks

--- a/notebooks/plot_encoding_model_fits/plot_alexnet.ipynb
+++ b/notebooks/plot_encoding_model_fits/plot_alexnet.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "68772b76",
+   "execution_count": 2,
+   "id": "d05c402c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,8 +20,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "da8ce176",
+   "execution_count": 3,
+   "id": "c79b365b",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,30 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f893a26f",
+   "id": "f70c9967",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.0000000e+00, 6.4989425e-02, 5.5234134e-01, 4.2069650e+00,\n",
+       "       3.1612778e+01, 2.3712740e+02, 1.7782695e+03, 1.3335206e+04,\n",
+       "       1.0000000e+05], dtype=float32)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out['lambdas']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "cb31ff69",
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "ad3d68ba",
+   "id": "1b81b42f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "d3c28eca",
+   "id": "273e8f9e",
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "4c8e718c",
+   "id": "30bafbcc",
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "c6adbc89",
+   "id": "a17628f2",
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "fe839d4c",
+   "id": "713a9fa7",
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "96f1fc6a",
+   "id": "60fafcba",
    "metadata": {
     "tags": []
    },
@@ -378,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "95966d10",
+   "id": "c529d3f9",
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "c817ea70",
+   "id": "c0684a5e",
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "0a6aaa5a",
+   "id": "b720c26c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "04906f1e",
+   "id": "8e390a60",
    "metadata": {},
    "outputs": [
     {
