--- a/notebooks/plot_encoding_model_fits/plot_gabor_plus_pyramid.ipynb
+++ b/notebooks/plot_encoding_model_fits/plot_gabor_plus_pyramid.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "e7f17974",
+   "execution_count": 1,
+   "id": "08f48a9b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,8 +20,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "785feeb5",
+   "execution_count": 2,
+   "id": "34098310",
    "metadata": {},
    "outputs": [
     {
@@ -54,8 +54,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "95ba3ee0",
+   "execution_count": 3,
+   "id": "19f9a1ea",
    "metadata": {},
    "outputs": [
     {
@@ -79,8 +79,8 @@
     "\n",
     "val_r2 = out['val_r2']\n",
     "\n",
-    "name1 = out['partial_version_names'][pp1][5:]\n",
-    "name2 = out['partial_version_names'][pp2][5:]\n",
+    "name1 = out['partial_version_names'][pp1].split('just_')[1]\n",
+    "name2 = out['partial_version_names'][pp2].split('just_')[1]\n",
     "\n",
     "ve_names = ['combined_model', 'unique: ' + name1, 'unique: ' + name2, 'shared']\n",
     "shared_ab, unique_a, unique_b = stats_utils.get_shared_unique_var(val_r2[:,pp0], val_r2[:,pp1], val_r2[:,pp2])\n",
@@ -103,8 +103,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "id": "44190283",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['full_combined_model',\n",
+       " 'just_gabor_solo',\n",
+       " 'just_texture_pyramid',\n",
+       " 'texture_pyramid_just_lower-level_no_other_modules',\n",
+       " 'texture_pyramid_just_higher-level_no_other_modules',\n",
+       " 'texture_pyramid_just_lower-level_plus_other_modules',\n",
+       " 'texture_pyramid_just_higher-level_plus_other_modules']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out['partial_version_names']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
-   "id": "ec413883",
+   "id": "deaea7ad",
    "metadata": {},
    "outputs": [
     {
