--- a/notebooks/plot_encoding_model_fits/plot_gabor_model.ipynb
+++ b/notebooks/plot_encoding_model_fits/plot_gabor_model.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c68df925",
+   "id": "83799bb0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,8 +21,10 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "63ddd833",
-   "metadata": {},
+   "id": "274cb861",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -61,9 +63,9 @@
       "voxel_subset_is_done_trn: shape (1,)\n",
       "voxel_subset_is_done_val: shape (1,)\n",
       "corr_each_feature: shape (19738, 96)\n",
-      "sem_discrim_each_axis: shape (19738, 59)\n",
-      "sem_corr_each_axis: shape (19738, 59)\n",
-      "discrim_type_list: len 59\n",
+      "sem_discrim_each_axis: shape (19738, 54)\n",
+      "sem_corr_each_axis: shape (19738, 54)\n",
+      "discrim_type_list: len 54\n",
       "n_ori_gabor = 12\n",
       "n_sf_gabor = 8\n",
       "gabor_nonlin_fn = True\n"
@@ -93,8 +95,105 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 43,
+   "id": "b47ece24",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-1., -1.,  1.,  1., nan])"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bad = np.isnan(out['sem_discrim_each_axis']) | np.isinf(out['sem_discrim_each_axis'])\n",
+    "np.unique(out['sem_corr_each_axis'][bad])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "99a04e00",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([nan])"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bad = np.isnan(out['sem_discrim_each_axis'])\n",
+    "np.unique(out['sem_corr_each_axis'][bad])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "1fe02a8e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-1., -1.,  1.,  1.])"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bad = np.isinf(out['sem_discrim_each_axis'])\n",
+    "np.unique(out['sem_corr_each_axis'][bad])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "016f0d03",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 9.2290522 ,  8.47180925,  8.15421183,  2.78958156,  5.7082575 ,\n",
+       "        7.00479916,  4.01831892,  6.80550623,  5.54352104,  4.26293751,\n",
+       "        5.46327734,  2.81292418,  4.73367734,  6.12773415,  6.36397112,\n",
+       "               inf,         inf,         inf,         inf,  1.99084049,\n",
+       "        2.37368874,         inf,         inf,  2.39299594,         inf,\n",
+       "        1.54352617,  5.45128943,  4.47780363,  6.12751107,  6.43736122,\n",
+       "        8.27831672,  4.98479445, 10.49747115,  7.46857951,  5.79602614,\n",
+       "        8.39959135,  3.36203893,  3.67777492,  5.18200108,  7.77480445,\n",
+       "        6.40458238,  4.87232958,  1.67700259,         inf,         inf,\n",
+       "        3.54827306,  2.69587201,  3.53626794,  1.70710382,  3.43426187,\n",
+       "        1.527101  ,  4.31554475,  2.89311751,  2.73752322])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.nanmean(np.abs(out['sem_discrim_each_axis']), axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
-   "id": "b7cf873c",
+   "id": "465f4871",
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +217,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "793133d5",
+   "id": "0a0ec820",
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0732ac84",
+   "id": "cb55f1a1",
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "3d2c8b99",
+   "id": "958924e6",
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "af602a61",
+   "id": "03e0fd17",
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "34c6f5a8",
+   "id": "6cb6df2a",
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +327,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "efac4c03",
+   "id": "18e6bede",
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +350,7 @@
   {
    "cell_type": "code",
    "execution_count": 150,
-   "id": "f59669b4",
+   "id": "9c991423",
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b5d98b27",
+   "id": "f59d2847",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "5a7791a5",
+   "id": "9ca102e5",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +460,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "80fe0119",
+   "id": "e8b3ec73",
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +528,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "4a33e218",
+   "id": "ad253710",
    "metadata": {
     "tags": []
    },
@@ -492,7 +591,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "1406ab60",
+   "id": "a27f5879",
    "metadata": {
     "tags": []
    },
@@ -554,7 +653,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "a55c5481",
+   "id": "b2ade2e8",
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +745,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "249761a7",
+   "id": "d83b395e",
    "metadata": {},
    "outputs": [
     {
@@ -734,7 +833,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "21bb407c",
+   "id": "38e2af8e",
    "metadata": {},
    "outputs": [
     {
@@ -813,7 +912,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "31364cf5",
+   "id": "88710e23",
    "metadata": {},
    "outputs": [
     {
@@ -889,7 +988,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "058d907e",
+   "id": "8676a999",
    "metadata": {},
    "outputs": [
     {
@@ -940,7 +1039,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "f4f85fff",
+   "id": "e9c32800",
    "metadata": {},
    "outputs": [
     {
@@ -1012,7 +1111,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "b92750ce",
+   "id": "a9c6b5dd",
    "metadata": {},
    "outputs": [
     {
@@ -1074,7 +1173,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "35d6ed42",
+   "id": "37511e3b",
    "metadata": {},
    "outputs": [
     {
@@ -1155,7 +1254,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "1df429e3",
+   "id": "80094cfa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1182,7 +1281,7 @@
   {
    "cell_type": "code",
    "execution_count": 187,
-   "id": "1304a900",
+   "id": "01b64ac8",
    "metadata": {},
    "outputs": [
     {
@@ -1203,7 +1302,7 @@
   {
    "cell_type": "code",
    "execution_count": 186,
-   "id": "024873d7",
+   "id": "5745dfbf",
    "metadata": {},
    "outputs": [
     {
@@ -1224,7 +1323,7 @@
   {
    "cell_type": "code",
    "execution_count": 188,
-   "id": "b2f58dfe",
+   "id": "c71f113e",
    "metadata": {},
    "outputs": [
     {
@@ -1245,7 +1344,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "89f0f4ff",
+   "id": "8ea01c96",
    "metadata": {},
    "outputs": [
     {
@@ -1326,7 +1425,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "8d86a1fd",
+   "id": "5ec90168",
    "metadata": {},
    "outputs": [
     {
@@ -1372,7 +1471,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "6a2661d7",
+   "id": "b46565b6",
    "metadata": {},
    "outputs": [
     {
@@ -1418,7 +1517,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "4e23a2eb",
+   "id": "1dbf8b9d",
    "metadata": {},
    "outputs": [
     {
@@ -1466,7 +1565,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "5dc9de1f",
+   "id": "7e68cae1",
    "metadata": {},
    "outputs": [
     {
