--- a/notebooks/plot_encoding_model_fits/plot_pyramid_plus_sketch_tokens.ipynb
+++ b/notebooks/plot_encoding_model_fits/plot_pyramid_plus_sketch_tokens.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7ac914b6",
+   "id": "a2bbf206",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "14f3f7d5",
+   "id": "069fa24f",
    "metadata": {},
    "outputs": [
     {
@@ -54,8 +54,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "e000fa0d",
+   "execution_count": 3,
+   "id": "f1128a68",
    "metadata": {},
    "outputs": [
     {
@@ -79,8 +79,8 @@
     "\n",
     "val_r2 = out['val_r2']\n",
     "\n",
-    "name1 = out['partial_version_names'][pp1][5:]\n",
-    "name2 = out['partial_version_names'][pp2][5:]\n",
+    "name1 = out['partial_version_names'][pp1].split('just_')[1]\n",
+    "name2 = out['partial_version_names'][pp2].split('just_')[1]\n",
     "\n",
     "ve_names = ['combined_model', 'unique: ' + name1, 'unique: ' + name2, 'shared']\n",
     "shared_ab, unique_a, unique_b = stats_utils.get_shared_unique_var(val_r2[:,pp0], val_r2[:,pp1], val_r2[:,pp2])\n",
@@ -88,6 +88,7 @@
     "var_expl = np.concatenate((val_r2[:,pp0:pp0+1], unique_a[:,np.newaxis], unique_b[:,np.newaxis],shared_ab[:,np.newaxis]),axis=1)\n",
     "\n",
     "colors = cm.plasma(np.linspace(0,1,4))\n",
+    "\n",
     "colors = np.flipud(colors)\n",
     "colors = np.concatenate((np.array([[0.6, 0.6, 0.6, 1]]), colors[[1,3],:], np.array([[0.2, 0.2, 0.2, 1]])), axis=0)\n",
     "\n",
@@ -103,8 +104,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "e9031146",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
-   "id": "7405035b",
+   "id": "af9117f3",
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "e325adfa",
+   "id": "40aa79ad",
    "metadata": {},
    "outputs": [
     {
