reorganizing jupyter notebooks

--- a/notebooks/plot_encoding_model_fits/plot_full_midlevel_plus_clip.ipynb
+++ b/notebooks/plot_encoding_model_fits/plot_full_midlevel_plus_clip.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e73ce878",
+   "id": "f21d63e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,8 +20,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "f3fd5e12",
+   "execution_count": 5,
+   "id": "39f131a2",
    "metadata": {},
    "outputs": [
     {
@@ -45,17 +45,36 @@
     "out = load_fits.load_fit_results(subject, fitting_type, n_from_end=0, verbose=True);\n",
     "# load_fits.print_output_summary(out)\n",
     "fig_save_folder=None\n",
-    "roi_def = roi_utils.get_combined_rois(subject,include_all=True,include_body=True,volume_space=True,verbose=False) \n",
+    "roi_def = roi_utils.nsd_roi_def(subject,verbose=False) \n",
     "\n",
-    "skip_inds = [10,11,15,23]\n",
-    "retlabs, facelabs, placelabs, bodylabs, \\\n",
-    "        ret_names, face_names, place_names, body_names = roi_def\n"
+    "skip_inds = [10,11,15,23]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "de829b9b",
+   "execution_count": 8,
+   "id": "6c0475e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['subject', 'volume_space', 'fitting_types', 'voxel_mask', 'brain_nii_shape', 'image_order', 'voxel_index', 'voxel_roi', 'voxel_ncsnr', 'which_prf_grid', 'models', 'best_losses', 'best_lambdas', 'best_params', 'lambdas', 'val_cc', 'val_r2', 'partial_masks', 'partial_version_names', 'zscore_features', 'ridge', 'debug', 'up_to_sess', 'single_sess', 'shuff_rnd_seed', 'use_precomputed_prfs', 'saved_prfs_fn', 'best_layer_each_voxel', 'saved_best_layer_fn', 'voxel_subset_is_done_trn', 'voxel_subset_is_done_val', 'corr_each_feature', 'sem_discrim_each_axis', 'sem_corr_each_axis', 'discrim_type_list', 'use_pca_st_feats', 'use_pca_pyr_feats_hl', 'pyramid_feature_info', 'group_all_hl_feats', 'n_ori_gabor', 'n_sf_gabor', 'gabor_nonlin_fn', 'clip_layer_name', 'clip_model_architecture', 'use_pca_clip_feats'])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "b668ab7e",
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +98,7 @@
        " True]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,8 +109,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "89229465",
+   "execution_count": 7,
+   "id": "eaef8ad2",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +120,7 @@
        "        True,  True,  True,  True,  True, False, False])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "6939a3aa",
+   "id": "cf443e0f",
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "1dbe16e5",
+   "id": "63d7da8a",
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "e02c41c5",
+   "id": "a779c0bc",
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "832ce1ff",
+   "id": "ccbb7017",
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f797ae8b",
+   "id": "7cc47998",
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +399,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "3a9bf523",
+   "id": "ec5892da",
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "b65082bf",
+   "id": "36675a69",
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "f6ec17d3",
+   "id": "e1830715",
    "metadata": {},
    "outputs": [
     {
