--- a/notebooks/plot_other_analyses/plot_clip_semantic_discrim.ipynb
+++ b/notebooks/plot_other_analyses/plot_clip_semantic_discrim.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "7ad6fb9b",
+   "execution_count": 134,
+   "id": "305cb6e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,8 +23,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "eb74e2eb",
+   "execution_count": 135,
+   "id": "a2a9c4bd",
    "metadata": {},
    "outputs": [
     {
@@ -76,8 +76,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 136,
+   "id": "a2bdf671",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['subject', 'volume_space', 'fitting_types', 'voxel_mask', 'brain_nii_shape', 'image_order', 'voxel_index', 'voxel_roi', 'voxel_ncsnr', 'which_prf_grid', 'models', 'best_losses', 'best_lambdas', 'best_params', 'lambdas', 'val_cc', 'val_r2', 'partial_masks', 'partial_version_names', 'zscore_features', 'ridge', 'debug', 'up_to_sess', 'single_sess', 'shuff_rnd_seed', 'use_precomputed_prfs', 'saved_prfs_fn', 'best_layer_each_voxel', 'saved_best_layer_fn', 'voxel_subset_is_done_trn', 'voxel_subset_is_done_val', 'corr_each_feature', 'sem_discrim_each_axis', 'sem_corr_each_axis', 'discrim_type_list', 'clip_layer_name', 'clip_model_architecture', 'use_pca_clip_feats'])"
+      ]
+     },
+     "execution_count": 136,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
-   "id": "db5be14b",
+   "id": "b7705d5f",
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "b9b24630",
+   "id": "1b5ec5b0",
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "0f45a18c",
+   "id": "6a150d5e",
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 133,
-   "id": "8a9a824c",
+   "id": "e132cca9",
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "43c3d085",
+   "id": "cd3e8461",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "5f933952",
+   "id": "fb465ecd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +289,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "9d2a9834",
+   "id": "0462a57e",
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "8f36ba53",
+   "id": "1f7579bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "dab075b5",
+   "id": "d77830b3",
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "563c14f4",
+   "id": "ef95d917",
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "20d53745",
+   "id": "f0302499",
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +421,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "85ecb691",
+   "id": "6a63835c",
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +445,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "af541d3e",
+   "id": "8d0e9d59",
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +469,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "e0b23ee3",
+   "id": "fd3b9135",
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "c5e441c7",
+   "id": "693b0a5c",
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +527,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "05c95eb1",
+   "id": "83bca344",
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +549,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "87304db6",
+   "id": "7596d0b7",
    "metadata": {},
    "outputs": [
     {
@@ -565,7 +586,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "b78f36a0",
+   "id": "221cd17e",
    "metadata": {},
    "outputs": [
     {
@@ -587,7 +608,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "e846d421",
+   "id": "db038a31",
    "metadata": {
     "tags": []
    },
@@ -689,7 +710,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "9b26e91c",
+   "id": "ea50034b",
    "metadata": {
     "tags": []
    },
@@ -790,7 +811,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "8b74fcc9",
+   "id": "c31d122e",
    "metadata": {},
    "outputs": [
     {
@@ -830,7 +851,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "8df61557",
+   "id": "6bdbcb94",
    "metadata": {},
    "outputs": [
     {
@@ -899,7 +920,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "4fb16409",
+   "id": "b20e0ebd",
    "metadata": {},
    "outputs": [
     {
@@ -933,7 +954,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "cc76308b",
+   "id": "259192ab",
    "metadata": {},
    "outputs": [
     {
@@ -956,7 +977,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "999b2594",
+   "id": "90bf68ed",
    "metadata": {},
    "outputs": [
     {
@@ -979,7 +1000,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "47d89e07",
+   "id": "430abda4",
    "metadata": {},
    "outputs": [
     {
@@ -1000,7 +1021,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "686207dc",
+   "id": "4d4047a1",
    "metadata": {},
    "outputs": [
     {
@@ -1024,7 +1045,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "e962fa77",
+   "id": "b1c790fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1034,7 +1055,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "3c25696c",
+   "id": "ad1eb5bb",
    "metadata": {},
    "outputs": [
     {
