updating all notebooks

--- a/notebooks/plot_other_analyses/gabor_feature_stats.ipynb
+++ b/notebooks/plot_other_analyses/gabor_feature_stats.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "61f9dce1",
+   "execution_count": 1,
+   "id": "23c26a06",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,8 +27,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "a6b92830",
+   "execution_count": 2,
+   "id": "3d32e52b",
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "a78ab9d9",
+   "id": "567e8e81",
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "ea01f99d",
+   "id": "3341763c",
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "ccfbd519",
+   "id": "ffdfc9a6",
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "67251295",
+   "id": "b7ecedca",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "a2303039",
+   "id": "f2c0f6a3",
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "6134744c",
+   "id": "11bab5c3",
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "3db56981",
+   "id": "612ec03d",
    "metadata": {},
    "outputs": [
     {
@@ -323,8 +323,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "046f4a38",
+   "execution_count": 3,
+   "id": "2ee60946",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,8 +347,49 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "id": "eb25ff10",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  0.  15.  30.  45.  60.  75.  90. 105. 120. 135. 150. 165.   0.  15.\n",
+      "  30.  45.  60.  75.  90. 105. 120. 135. 150. 165.   0.  15.  30.  45.\n",
+      "  60.  75.  90. 105. 120. 135. 150. 165.   0.  15.  30.  45.  60.  75.\n",
+      "  90. 105. 120. 135. 150. 165.   0.  15.  30.  45.  60.  75.  90. 105.\n",
+      " 120. 135. 150. 165.   0.  15.  30.  45.  60.  75.  90. 105. 120. 135.\n",
+      " 150. 165.   0.  15.  30.  45.  60.  75.  90. 105. 120. 135. 150. 165.\n",
+      "   0.  15.  30.  45.  60.  75.  90. 105. 120. 135. 150. 165.]\n",
+      "[0.35714286 0.35714286 0.35714286 0.35714286 0.35714286 0.35714286\n",
+      " 0.35714286 0.35714286 0.35714286 0.35714286 0.35714286 0.35714286\n",
+      " 0.56236075 0.56236075 0.56236075 0.56236075 0.56236075 0.56236075\n",
+      " 0.56236075 0.56236075 0.56236075 0.56236075 0.56236075 0.56236075\n",
+      " 0.88549892 0.88549892 0.88549892 0.88549892 0.88549892 0.88549892\n",
+      " 0.88549892 0.88549892 0.88549892 0.88549892 0.88549892 0.88549892\n",
+      " 1.39431555 1.39431555 1.39431555 1.39431555 1.39431555 1.39431555\n",
+      " 1.39431555 1.39431555 1.39431555 1.39431555 1.39431555 1.39431555\n",
+      " 2.19550336 2.19550336 2.19550336 2.19550336 2.19550336 2.19550336\n",
+      " 2.19550336 2.19550336 2.19550336 2.19550336 2.19550336 2.19550336\n",
+      " 3.45706178 3.45706178 3.45706178 3.45706178 3.45706178 3.45706178\n",
+      " 3.45706178 3.45706178 3.45706178 3.45706178 3.45706178 3.45706178\n",
+      " 5.44352442 5.44352442 5.44352442 5.44352442 5.44352442 5.44352442\n",
+      " 5.44352442 5.44352442 5.44352442 5.44352442 5.44352442 5.44352442\n",
+      " 8.57142857 8.57142857 8.57142857 8.57142857 8.57142857 8.57142857\n",
+      " 8.57142857 8.57142857 8.57142857 8.57142857 8.57142857 8.57142857]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.array(ori_deg))\n",
+    "print(np.array(sf_cyc_per_deg))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 27,
-   "id": "a32fa1b9",
+   "id": "178634e7",
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +454,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "82d85bb1",
+   "id": "40b59be9",
    "metadata": {
     "tags": []
    },
@@ -467,7 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "47f74ed4",
+   "id": "f558dd6e",
    "metadata": {},
    "outputs": [
     {
@@ -581,7 +622,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "c8c530f3",
+   "id": "40604cac",
    "metadata": {},
    "outputs": [
     {
@@ -694,7 +735,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "92ef75f5",
+   "id": "6fb2c36e",
    "metadata": {},
    "outputs": [
     {
@@ -806,7 +847,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "f78fa4c5",
+   "id": "a5fa8cf9",
    "metadata": {},
    "outputs": [
     {
@@ -918,7 +959,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "0e0f7c20",
+   "id": "3f36dc8f",
    "metadata": {},
    "outputs": [
     {
@@ -972,7 +1013,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "10d09e7d",
+   "id": "6d9c7c91",
    "metadata": {},
    "outputs": [
     {
@@ -993,7 +1034,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4e30f80f",
+   "id": "745e85ad",
    "metadata": {},
    "outputs": [
     {
@@ -1015,7 +1056,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "b7ea2fba",
+   "id": "bcbece95",
    "metadata": {},
    "outputs": [
     {
@@ -1069,7 +1110,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "a96da4ec",
+   "id": "94a54874",
    "metadata": {},
    "outputs": [
     {
@@ -1191,7 +1232,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "93c76221",
+   "id": "159e8091",
    "metadata": {},
    "outputs": [
     {
@@ -1265,7 +1306,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "cf65d8a0",
+   "id": "3817f0c0",
    "metadata": {},
    "outputs": [
     {
@@ -1324,7 +1365,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "4a2310a6",
+   "id": "40551411",
    "metadata": {},
    "outputs": [
     {
@@ -1419,7 +1460,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "1e9bcf49",
+   "id": "6fd47926",
    "metadata": {},
    "outputs": [
     {
@@ -1515,7 +1556,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "ef351cc9",
+   "id": "582b7be1",
    "metadata": {},
    "outputs": [
     {
@@ -1568,7 +1609,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "efb7dd43",
+   "id": "fb69b23a",
    "metadata": {},
    "outputs": [
     {
@@ -1619,7 +1660,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "7626640c",
+   "id": "57a2e9e4",
    "metadata": {},
    "outputs": [
     {
@@ -1669,7 +1710,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "8d519cec",
+   "id": "4c070981",
    "metadata": {},
    "outputs": [
     {
@@ -1704,7 +1745,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "ba233d98",
+   "id": "ec556d7d",
    "metadata": {},
    "outputs": [
     {
@@ -1727,7 +1768,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "ec2a4265",
+   "id": "b982a45b",
    "metadata": {},
    "outputs": [
     {
@@ -1753,7 +1794,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "74f00daa",
+   "id": "28966a2f",
    "metadata": {},
    "outputs": [
     {
@@ -1775,7 +1816,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "417e04c4",
+   "id": "ed16acfc",
    "metadata": {},
    "outputs": [
     {
@@ -1794,7 +1835,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "e6fba265",
+   "id": "b7fe3320",
    "metadata": {
     "tags": []
    },
@@ -1882,7 +1923,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "23ddc6c4",
+   "id": "79789d9b",
    "metadata": {},
    "outputs": [
     {
@@ -1965,7 +2006,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "b435e424",
+   "id": "45221f49",
    "metadata": {},
    "outputs": [
     {
@@ -2047,7 +2088,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "cc75ee64",
+   "id": "38d432bf",
    "metadata": {},
    "outputs": [
     {
